@@ -10,6 +10,12 @@ NEW FEATURES
     o New motif_peaks() function: test for significantly overrepresented peaks
       of motif sites in a set of sequences
 
+MINOR CHANGES
+
+    o Expanded motif_pvalue() examples section
+
+    o New vignette section for motif_peaks() added to SequenceSearches.Rmd
+
 CHANGES IN VERSION 1.0.13
 -------------------------
 
